--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui",
-  "version": "1.0.0",
+  "name": "match-ui",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@match/eslint-config": "workspace:^0.0.1",
+    "eslint": "^8.33.0",
+    "prettier": "^2.8.3",
+    "stylelint": "^14.16.1",
     "typescript": "^4.9.5"
   }
 }
