build(cli): 配置 match-cli, 添加 lint 命令

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,4 @@
 {
-  "extends": [
-    "@match/stylelint-config"
-  ]
+  "extends": ["@match/stylelint-config"],
+  "ignoreFiles": ["packages/match-cli/lib/**"]
 }
