--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
     "target": "ESNext",
     "strict": true,
     "declaration": true,
@@ -10,10 +9,7 @@
     "resolveJsonModule": true,
     "jsx": "preserve",
     "lib": ["ESNext", "dom"],
-    "moduleResolution": "node",
-    "noEmit": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "module": "ESNext",
+    "moduleResolution": "node"
+  }
 }
