--- a/packages/match-cli/package.json
+++ b/packages/match-cli/package.json
@@ -21,11 +21,13 @@
   ],
   "dependencies": {
     "commander": "^10.0.0",
+    "conventional-changelog": "^3.1.25",
     "execa": "^6.1.0",
     "fs-extra": "^11.1.0",
     "ora": "^6.1.2"
   },
   "devDependencies": {
+    "@types/conventional-changelog": "^3.1.1",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.19"
   }
